Cleaning up code across every page

--- a/about.html
+++ b/about.html
@@ -17,38 +17,7 @@
     <title>Rain City Websites</title>
 
     <!-- JS -->
-
     <script type="text/javascript" src="main.js"></script>
-    <script>
-      /* Open */
-      function openNav() {
-        document.getElementById("myNav").style.height = "100%";
-
-        for (let i = 1; i < 7; i++) {
-          id = "link" + i;
-          document.getElementById(id).style.transitionDelay = i - 1 + "50ms";
-          document.getElementById(id).style.transform = "translate(0,0)";
-        }
-      }
-
-      /* Close */
-      function closeNav() {
-        for (let i = 1; i < 7; i++) {
-          id = "link" + i;
-          delay = 4;
-          document.getElementById(id).style.transitionDelay =
-            delay - i + "50ms";
-          document.getElementById(id).style.transform = "translate(0,100%)";
-        }
-
-        setTimeout(closeNavWait, 1000);
-
-        //function definition
-        function closeNavWait() {
-          document.getElementById("myNav").style.height = "0%";
-        }
-      }
-    </script>
 
     <title>Rain City Websites</title>
   </head>
@@ -195,107 +164,27 @@
             OUR GUIDING <br /><span id="orange-header">PRINCIPLES</span>
           </div>
           <p>
-            We focus on the needs on each individual business and tailor content
-            around what makes it unique.
+            $0 down for a standard 5 page small business website. If you need
+            more than that then we have to do custom pricing based on the scope
+            of work, number of additional pages, and time involved.
+          </p>
+          <p>
+            You own your domain, content, listing, and profiles. Cancel anytime
+            with no fees or hassle.
           </p>
         </div>
         <div class="right-section">
-          <button type="button" class="collapsible">
-            CUSTOM WEB DEVELOPMENT
-          </button>
-          <div class="content">
-            <p>
-              We meticulously write the code line by line. This gives us much
-              more control over the design, and the website performs lightning
-              fast because there's no bloated or messy code that slows it down.
-            </p>
-            <ul>
-              <li>
-                <img src="/images/icons8-done.svg" />Performance Optimized
-              </li>
-              <li><img src="/images/icons8-done.svg" />Thoroughly Tested</li>
-              <li><img src="/images/icons8-done.svg" />Matches design 1 : 1</li>
-            </ul>
-          </div>
-          <button type="button" class="collapsible">
-            SEARCH ENGINE OPTIMIZATION
-          </button>
-          <div class="content">
-            <p>
-              We meticulously write the code line by line. This gives us much
-              more control over the design, and the website performs lightning
-              fast because there's no bloated or messy code that slows it down.
-            </p>
-            <ul>
-              <li>
-                <img src="/images/icons8-done.svg" />Performance Optimized
-              </li>
-              <li><img src="/images/icons8-done.svg" />Thoroughly Tested</li>
-              <li><img src="/images/icons8-done.svg" />Matches design 1 : 1</li>
-            </ul>
-          </div>
-          <button type="button" class="collapsible">
-            THIRD-PARTY INTEGRATIONS
-          </button>
-          <div class="content">
-            <p>
-              We meticulously write the code line by line. This gives us much
-              more control over the design, and the website performs lightning
-              fast because there's no bloated or messy code that slows it down.
-            </p>
-            <ul>
-              <li>
-                <img src="/images/icons8-done.svg" />Performance Optimized
-              </li>
-              <li><img src="/images/icons8-done.svg" />Thoroughly Tested</li>
-              <li><img src="/images/icons8-done.svg" />Matches design 1 : 1</li>
-            </ul>
-          </div>
-          <button type="button" class="collapsible">WEBSITE MAINTENANCE</button>
-          <div class="content">
-            <p>
-              We meticulously write the code line by line. This gives us much
-              more control over the design, and the website performs lightning
-              fast because there's no bloated or messy code that slows it down.
-            </p>
-            <ul>
-              <li>
-                <img src="/images/icons8-done.svg" />Performance Optimized
-              </li>
-              <li><img src="/images/icons8-done.svg" />Thoroughly Tested</li>
-              <li><img src="/images/icons8-done.svg" />Matches design 1 : 1</li>
-            </ul>
-          </div>
-          <button type="button" class="collapsible">LIFETIME UPDATES</button>
-          <div class="content">
-            <p>
-              We meticulously write the code line by line. This gives us much
-              more control over the design, and the website performs lightning
-              fast because there's no bloated or messy code that slows it down.
-            </p>
-            <ul>
-              <li>
-                <img src="/images/icons8-done.svg" />Performance Optimized
-              </li>
-              <li><img src="/images/icons8-done.svg" />Thoroughly Tested</li>
-              <li><img src="/images/icons8-done.svg" />Matches design 1 : 1</li>
-            </ul>
-          </div>
-          <button type="button" class="collapsible">PLAYERS CLUB</button>
-          <div class="content">
-            <p>
-              We meticulously write the code line by line. This gives us much
-              more control over the design, and the website performs lightning
-              fast because there's no bloated or messy code that slows it down.
-            </p>
-            <ul>
-              <li>
-                <img src="/images/icons8-done.svg" />Performance Optimized
-              </li>
-              <li><img src="/images/icons8-done.svg" />Thoroughly Tested</li>
-              <li><img src="/images/icons8-done.svg" />Matches design 1 : 1</li>
-            </ul>
-          </div>
+          <p>
+            We specialize in small business web design and development for
+            clients anywhere in the US. Every line of code is written by hand to
+            ensure the best performance, which helps bring in more customers to
+            your site and bring more revenue to your business.
+          </p>
+          <p>
+            We work with you to design, manage and implement innovative
+            solutions that meet the business needs and address the challenges of
+            growth. We look forward to hearing from you!
+          </p>
         </div>
       </div>
     </section>
