Finishing about page

--- a/about.html
+++ b/about.html
@@ -146,6 +146,48 @@
     </section>
 
     <!-- ============================================ -->
+    <!--               MEET THE TEAM                  -->
+    <!-- ============================================ -->
+
+    <div id="section-title">
+      <div class="container">
+        <div class="left-section">Meet The Team</div>
+        <div class="right-section">03</div>
+      </div>
+    </div>
+
+    <section id="meet-the-team" class="section">
+      <div class="container">
+        <div class="right-section">
+          <div class="right-section-header">
+            WELCOME TO <br /><span id="orange-header">THE FAMILY</span>
+          </div>
+          <p>
+            My name is Bryan, I am the owner and sole developer of Rain City
+            Websites. I got into programming after my wife had our first child.
+            I was and still am a stay-at-home dad, and I wanted a career that I
+            can do from home and still be there with the kids to watch them grow
+            up. So over the course of two years I taught myself how to code
+            websites the right way by hand and just started calling small
+            businesses to offer my help.
+          </p>
+          <p>
+            What I found was that a lot of small businesses don't have the funds
+            to spend thousands of dollars upfront on a new website. And the ones
+            that did, got taken advantage of and have a terrible website that
+            looks like it was built by someone in a dungeon and haven't seen
+            design trends for the last 10 years.
+          </p>
+        </div>
+        <div class="left-section">
+          <div class="header">Bryan</div>
+          <div class="subheader">Owner & Developer</div>
+          <img src="images/bryan_photo.svg" />
+        </div>
+      </div>
+    </section>
+
+    <!-- ============================================ -->
     <!--                   ABOUT                      -->
     <!-- ============================================ -->
     <div class="navbar-overlay-animation2 is-active"></div>
@@ -156,7 +198,7 @@
         <div class="right-section">01</div>
       </div>
     </div>
-
+    <!--
     <section id="about" class="section">
       <div class="container">
         <div class="left-section">
@@ -174,66 +216,207 @@
           </p>
         </div>
         <div class="right-section">
-          <p>
-            We specialize in small business web design and development for
-            clients anywhere in the US. Every line of code is written by hand to
-            ensure the best performance, which helps bring in more customers to
-            your site and bring more revenue to your business.
-          </p>
-          <p>
-            We work with you to design, manage and implement innovative
-            solutions that meet the business needs and address the challenges of
-            growth. We look forward to hearing from you!
-          </p>
+          <div class="pricing-box-container">
+            <img
+              class="light"
+              decoding="async"
+              src="/images/verify.svg"
+              alt=""
+              aria-hidden="true"
+              width="14%"
+            />
+            <div class="pricing-box">
+              <div class="pricing-title">Hosting Fees Included</div>
+              <p>Hosting fees are built right into the monthly payment.</p>
+              <hr />
+            </div>
+          </div>
+          <div class="pricing-box-container">
+            <img
+              class="light"
+              decoding="async"
+              src="/images/verify.svg"
+              alt=""
+              aria-hidden="true"
+              width="14%"
+            />
+            <div class="pricing-box">
+              <div class="pricing-title">Unlimited Edits</div>
+              <p>
+                Change anything you want at anytime and it will be done that
+                day.
+              </p>
+              <hr />
+            </div>
+          </div>
+          <div class="pricing-box-container">
+            <img
+              class="light"
+              decoding="async"
+              src="/images/verify.svg"
+              alt=""
+              aria-hidden="true"
+              width="14%"
+            />
+            <div class="pricing-box">
+              <div class="pricing-title">24/7 Customer Service</div>
+              <p>Call direct anytime, no phone trees or automated responses.</p>
+              <hr />
+            </div>
+          </div>
+          <div class="pricing-box-container">
+            <img
+              class="light"
+              decoding="async"
+              src="/images/verify.svg"
+              alt=""
+              aria-hidden="true"
+              width="14%"
+            />
+            <div class="pricing-box">
+              <div class="pricing-title">Design & Development</div>
+              <p>Includes over 40 hours of design, development, and testing.</p>
+              <hr />
+            </div>
+          </div>
+          <div class="pricing-box-container">
+            <img
+              class="light"
+              decoding="async"
+              src="/images/verify.svg"
+              alt=""
+              aria-hidden="true"
+              width="14%"
+            />
+            <div class="pricing-box">
+              <div class="pricing-title">Citations And Listings</div>
+              <p>
+                It's important to have your website linked from other websites.
+              </p>
+              <hr />
+            </div>
+          </div>
+          <div class="pricing-box-container">
+            <img
+              class="light"
+              decoding="async"
+              src="/images/verify.svg"
+              alt=""
+              aria-hidden="true"
+              width="14%"
+            />
+            <div class="pricing-box">
+              <div class="pricing-title">Google Analytics</div>
+              <p>We install Analytics for free to monitor traffic.</p>
+              <hr />
+            </div>
+          </div>
         </div>
       </div>
     </section>
-
-    <!-- ============================================ -->
-    <!--               MEET THE TEAM                  -->
-    <!-- ============================================ -->
-
-    <div id="section-title">
-      <div class="container">
-        <div class="left-section">Meet The Team</div>
-        <div class="right-section">03</div>
-      </div>
+  -->
+    <div class="process-header">
+      <div class="process-header-container">OUR VALUES</div>
     </div>
 
-    <section id="meet-the-team" class="section">
+    <div id="about" class="section">
       <div class="container">
-        <div class="left-section">
-          <img src="images/bryan_photo.svg" />
+        <div class="left-section-mobile">
+          <div class="left-section-element">
+            <div class="float-left">
+              <div class="number">01</div>
+              <div class="header">RESEARCH & PLANNING</div>
+            </div>
+            <div class="float-right">
+              <p>
+                Direct, timely, and jargon-free communication is the foundation
+                of Thrive. We value having a close relationship with our clients
+                that allows for free-flowing communication.
+              </p>
+              <ul>
+                <li>
+                  <img src="/images/icons8-done.svg" />Performance Optimized
+                </li>
+                <li><img src="/images/icons8-done.svg" />Thoroughly Tested</li>
+                <li>
+                  <img src="/images/icons8-done.svg" />Matches design 1 : 1
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="left-section-element">
+            <div class="float-left">
+              <div class="number">02</div>
+              <div class="header">SELECTIVE</div>
+            </div>
+            <div class="float-right">
+              <p>
+                While we know we can help most people, we focus only on projects
+                we care about and know we can really knock out of the park. If
+                we don't think we're the best fit for your project, we'll
+                introduce you to someone we think could be.
+              </p>
+              <ul>
+                <li>
+                  <img src="/images/icons8-done.svg" />Performance Optimized
+                </li>
+                <li><img src="/images/icons8-done.svg" />Thoroughly Tested</li>
+                <li>
+                  <img src="/images/icons8-done.svg" />Matches design 1 : 1
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="left-section-element">
+            <div class="float-left">
+              <div class="number">03</div>
+              <div class="header">PROCESS</div>
+            </div>
+            <div class="float-right">
+              <p>
+                We've developed a process over the years that ensures each
+                project is completed effectively to achieve its goals. You will
+                always know where we are in the project and what our next steps
+                are.
+              </p>
+              <ul>
+                <li>
+                  <img src="/images/icons8-done.svg" />Performance Optimized
+                </li>
+                <li><img src="/images/icons8-done.svg" />Thoroughly Tested</li>
+                <li>
+                  <img src="/images/icons8-done.svg" />Matches design 1 : 1
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="left-section-element">
+            <div class="float-left">
+              <div class="number">04</div>
+              <div class="header">EXPERTISE</div>
+            </div>
+            <div class="float-right">
+              <p>
+                Each team member is super experienced in what they do. They
+                focus on what they're best at, which lets us knock it out of the
+                park every time. There's no substitute for expert-level
+                knowledge and skill.
+              </p>
+              <ul>
+                <li>
+                  <img src="/images/icons8-done.svg" />Performance Optimized
+                </li>
+                <li><img src="/images/icons8-done.svg" />Thoroughly Tested</li>
+                <li>
+                  <img src="/images/icons8-done.svg" />Matches design 1 : 1
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <div class="right-section">
-          <div class="right-section-header">JOIN THE FAMILY!</div>
-          <p>
-            We don't just create web design for the internet, we create
-            meaningful digital experiences for users that go above and beyond
-            through data-driven UI/UX practices. Our design scales and converts.
-          </p>
-          <p>
-            As the only constant is change, traditional web design is outdated.
-            While it may still "work," it is difficult to deliver satisfactory
-            results in an already extremely competitive market. Proactive,
-            strategy-driven user experiences is the new standard to engage with
-            the target audience.
-          </p>
-          <p>
-            Our design team at Vyntex has extensive and up-to-date knowledge in
-            UI (user interface), UX (user experience), CX (customer experience),
-            graphic design, animations, and more. As a website is a business's
-            best marketing tool, we delivery exceptional user experience that
-            sells.
-          </p>
-          <p>
-            Our team will always over deliver to ensure that your business has
-            the tools necessary to succeed. Bring your ideas and products to
-            life with our talented design team.
-          </p>
-        </div>
+        <div class="right-section-mobile"></div>
       </div>
-    </section>
+    </div>
 
     <!-- ============================================ -->
     <!--                   FOOTER                     -->
