--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
           <div class="hero-animation">
             <p class="hero-p hero-transition">
               No page builders or WordPress necessary - We offer hand-coded
+            </p>
+          </div>
+          <div class="hero-animation">
+            <p class="hero-p hero-transition">
               websites with superior results from $200/mo.
             </p>
           </div>
