About page mobile responsiveness

--- a/about.html
+++ b/about.html
@@ -325,7 +325,7 @@
           <div class="left-section-element">
             <div class="float-left">
               <div class="number">01</div>
-              <div class="header">RESEARCH & PLANNING</div>
+              <div class="header">EFFECTIVE COMMUNICATION</div>
             </div>
             <div class="float-right">
               <p>
@@ -347,7 +347,7 @@
           <div class="left-section-element">
             <div class="float-left">
               <div class="number">02</div>
-              <div class="header">SELECTIVE</div>
+              <div class="header">CONTINUOUS INNOVATION</div>
             </div>
             <div class="float-right">
               <p>
@@ -370,7 +370,7 @@
           <div class="left-section-element">
             <div class="float-left">
               <div class="number">03</div>
-              <div class="header">PROCESS</div>
+              <div class="header">GENUINE CONNECTION</div>
             </div>
             <div class="float-right">
               <p>
@@ -393,7 +393,7 @@
           <div class="left-section-element">
             <div class="float-left">
               <div class="number">04</div>
-              <div class="header">EXPERTISE</div>
+              <div class="header">AUTHENTIC EXPERTISE</div>
             </div>
             <div class="float-right">
               <p>
