Styling blog pages

--- a/insights/advantages-of-developing-your-own-website.html
+++ b/insights/advantages-of-developing-your-own-website.html
@@ -17,6 +17,7 @@
     <!-- JS -->
     <script type="text/javascript" src="../main.js"></script>
 
+
     <title>Rain City Websites</title>
   </head>
   <body>
@@ -174,7 +175,7 @@
           <div class="blog-page-element">
             <div class="right">
               <div class="header">
-                Advantages of Developing your own Website
+                OVERVIEW
               </div>
               <p>
                 There are many advantages to coding your own website, rather
