--- a/insights/advantages-of-developing-your-own-website.html
+++ b/insights/advantages-of-developing-your-own-website.html
@@ -219,7 +219,7 @@
                 increased control, better performance, enhanced security,
                 improved SEO, and enhanced credibility. While it may require
                 some time and effort, the benefits of coding your own website
-                are well worth it.
+                are well worth it.d 
               </p>
             </div>
           </div>
