Fixed broken links and added loading animation for all blog pages

--- a/insights/how-to-optimize-a-website-for-mobile.html
+++ b/insights/how-to-optimize-a-website-for-mobile.html
@@ -79,13 +79,13 @@
           <span class="closebtn" onclick="closeNav()">&times;</span>
         </div>
         <div class="overlay-links">
-          <h1><a id="link1" class="link" href="services.html">SERVICES</a></h1>
-          <h1><a id="link2" class="link" href="about.html">WORK</a></h1>
-          <h1><a id="link3" class="link" href="about.html">ABOUT</a></h1>
-          <h1><a id="link4" class="link" href="blog.html">INSIGHTS</a></h1>
-          <h1><a id="link5" class="link" href="contact.html">CONTACT</a></h1>
+          <h1><a id="link1" class="link" href="../services.html">SERVICES</a></h1>
+          <h1><a id="link2" class="link" href="../about.html">WORK</a></h1>
+          <h1><a id="link3" class="link" href="../about.html">ABOUT</a></h1>
+          <h1><a id="link4" class="link" href="../blog.html">INSIGHTS</a></h1>
+          <h1><a id="link5" class="link" href="../contact.html">CONTACT</a></h1>
           <h1>
-            <a id="link6" class="link-email" href="contact.html">
+            <a id="link6" class="link-email" href="../contact.html">
               RAINCITYWEBSITES.COM
               <img src="../images/icons8-circled-right-100.png" />
             </a>
@@ -102,20 +102,28 @@
       <div class="container">
         <div class="left-section">
           <div class="hero-animation">
-            <p class="hero-p">Bryan Moore &nbsp &#9679 &nbsp 12.24.2022 &nbsp &#9679 &nbsp 10 min.</p>
+            <p class="hero-p hero-transition">Bryan Moore &nbsp &#9679 &nbsp 12.24.2022 &nbsp &#9679 &nbsp 10 min.</p>
+          </div>
+          <br />
+          <br />
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">HOW TO OPTIMIZE</div>
+          </div>
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">A WEBSITE FOR </div>
+          </div>
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">MOBILE DEVICES</div>
           </div>
           <br />
           <div class="hero-animation">
-            <div class="hero-header">
-              HOW TO OPTIMIZE A WEBSITE FOR MOBILE DEVICES
-            </div>
+            <p class="hero-p hero-transition">
+              No page builders or WordPress necessary - We offer hand-coded
+            </p>
           </div>
-          <br />
           <div class="hero-animation">
-            <p class="hero-p">
-              The growing interest in Ecommerce doesn't seem to slow -
-              therefore, it is important to learn about how it all started, the
-              different types of E-commerce websites, and their business models.
+            <p class="hero-p hero-transition">
+              websites with superior results from $200/mo.
             </p>
           </div>
         </div>
